--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Accueil | OMNES IMMOBILIER</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style_commun.css">
+  <link rel="stylesheet" type="text/css" href="style_accueil.css">
 </head>
 
 <body>
@@ -24,11 +25,11 @@
       </button>
       <div class="collapse navbar-collapse" id="main-navigation">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link" href="#">Accueil</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Tout Parcourir</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Recherche</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Rendez-vous</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Votre Compte</a></li>
+          <li class="nav-item"><a class="nav-link" href="homepage.html">Accueil</a></li>
+          <li class="nav-item"><a class="nav-link" href="tout_parcourir.html">Tout Parcourir</a></li>
+          <li class="nav-item"><a class="nav-link" href="recherche.html">Recherche</a></li>
+          <li class="nav-item"><a class="nav-link" href="rendez_vous.html">Rendez-vous</a></li>
+          <li class="nav-item"><a class="nav-link" href="votre_compte.html">Votre Compte</a></li>
         </ul>
       </div>
     </nav>
